# site-capture

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: dogfooding.md
src/site_capture/: __init__.py  cli.py  discovery.py  markdown.py  models.py  output.py
src/site_capture/drivers/: __init__.py  base.py  capture_playwriter.js  playwright_driver.py  playwriter.py
tests/: test_discovery.py  test_markdown.py  test_output.py  test_playwriter_driver.py
